--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,29 @@ h2{
 p{
     margin-bottom: 8px;
 }
-.addListItem{
+.button{
+    background-color: black;
+    color: white;
+    padding: 8px 16px;
+    border: 0px;
+    border-radius: 8px;
+    font-family: "Poppins", sans-serif;
+    margin-top: 8px;
+}
+input[type="text"]{
+    padding: 8px 16px;
+    border: 1px solid #b0b0b0;
+    border-radius: 8px;
+    font-family: "Poppins", sans-serif;
+    margin: 4px 4px;
+    width: 200px;
+}
+form{
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 40px;
+}
+#addListItem{
     padding: 8px 0.9rem;
     border: 0px;
     border-radius: 50%;
@@ -30,7 +52,7 @@ p{
     color: white;
     margin-top: 8px;
 }
-.container{
+#container{
     margin-top: 24px;
 }
 .Item{
@@ -39,6 +61,7 @@ p{
     border-radius: 8px;
     display: flex;
     align-items: center;
+    margin-bottom: 8px;
 
 }
 input[type="checkbox"] {
@@ -47,4 +70,13 @@ input[type="checkbox"] {
   border: 1px solid #979797;
   border-radius: 4px;
   margin-right: 12px;
+}
+.modalecontainer{
+    display: none;
+    background-color: rgba(0, 0, 0, 0.408);
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top:0;
+    left: 0;
 }
